Initial commit for MyProject

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <button class="project-button" onclick="openProject('https://angular-project-tan.vercel.app/')">Angular Project</button>
             <button class="project-button" onclick="openProject('https://svelte-project-kappa.vercel.app/')">Svelte Project</button>
             <button class="project-button" onclick="openProject('https://nuxt-js-sand.vercel.app/')">Nuxt.js Project</button>
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/DodgeTheCreeps/')">DodgeTheCreeps</button>
         </section>
     </main>
 
