--- a/index.html
+++ b/index.html
@@ -5,40 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>My Project Showcase</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>My Project Showcase</h1>
+        <p class="subtitle">A collection of my web development journey</p>
     </header>
 
     <main>
         <section class="projects">
+            <!-- Personal & Main Projects -->
             <button class="project-button" onclick="openProject('https://amnamine.github.io/MyPortfolio/')">Portfolio</button>
+            <button class="project-button" onclick="openProject('https://github.com/amnamine')">GitHub Profile</button>
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/TodooList/')">Todo List</button>
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/ElegantClock/')">Elegant Clock</button>
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/MyProjects/')">All Projects</button>
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/MyMobileApps/')">Mobile Apps</button>
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/MyGames/')">Games Collection</button>
+
+            <!-- Framework Showcases -->
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/Angular-Project/')">Angular Demo</button>
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/Vue-Project/')">Vue Demo</button>
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/React-Project/')">React Demo</button>
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/Svelte-Project/')">Svelte Demo</button>
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/Ember-Project/')">Ember Demo</button>
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/Bootstrap-Showcase/')">Bootstrap Demo</button>
+            <button class="project-button" onclick="openProject('https://amnamine.github.io/Tailwind-Showcase/')">Tailwind Demo</button>
+
+            <!-- Web Applications -->
+            <button class="project-button" onclick="openProject('https://cscclub-mu.vercel.app/')">CSC Club</button>
+            <button class="project-button" onclick="openProject('https://drivini.vercel.app/')">Drivini</button>
+            <button class="project-button" onclick="openProject('https://cscc-website.vercel.app/')">CSCC Website</button>
+            <button class="project-button" onclick="openProject('https://cscc-ecopies.vercel.app/')">CSCC Ecopies</button>
+            
+            <!-- Tools & Calculators -->
             <button class="project-button" onclick="openProject('https://amnamine.github.io/BMI-Calculator/')">BMI Calculator</button>
             <button class="project-button" onclick="openProject('https://amnamine.github.io/Simple-Calculator/')">Simple Calculator</button>
             <button class="project-button" onclick="openProject('https://amnamine.github.io/Simple-Weather-App/')">Weather App</button>
-            <button class="project-button" onclick="openProject('https://amnamine.github.io/Bootstrap-Showcase/')">Bootstrap Showcase</button>
-            <button class="project-button" onclick="openProject('https://amnamine.github.io/Tailwind-Showcase/')">Tailwind Showcase</button>
-            <button class="project-button" onclick="openProject('https://next-js-six-wheat-39.vercel.app/')">Next.js Project</button>
-            <button class="project-button" onclick="openProject('https://clock-six-lime.vercel.app/')">Clock App</button>
+            <button class="project-button" onclick="openProject('https://weather-app-sigma-three-96.vercel.app/')">Weather App V2</button>
+            <button class="project-button" onclick="openProject('https://note-taking-app-kappa-self.vercel.app/')">Note Taking App</button>
+
+            <!-- Games -->
+            <button class="project-button" onclick="openProject('https://dodge-the-creeps-seven.vercel.app/')">Dodge The Creeps</button>
             <button class="project-button" onclick="openProject('https://snake-game-mocha-pi.vercel.app/')">Snake Game</button>
-            <button class="project-button" onclick="openProject('https://ping-pong-psi-nine.vercel.app/')">Ping Pong Game</button>
+            <button class="project-button" onclick="openProject('https://ping-pong-psi-nine.vercel.app/')">Ping Pong</button>
+            <button class="project-button" onclick="openProject('https://tic-tac-toe-game-ten-weld.vercel.app/')">Tic Tac Toe</button>
+
+            <!-- Fun Projects -->
             <button class="project-button" onclick="openProject('https://coin-flip-gold.vercel.app/')">Coin Flip</button>
             <button class="project-button" onclick="openProject('https://dice-roll-plum.vercel.app/')">Dice Roll</button>
             <button class="project-button" onclick="openProject('https://jokes-generator-sigma.vercel.app/')">Jokes Generator</button>
-            <button class="project-button" onclick="openProject('https://tic-tac-toe-game-ten-weld.vercel.app/')">Tic Tac Toe</button>
-            <button class="project-button" onclick="openProject('https://weather-app-sigma-three-96.vercel.app/')">Weather App V2</button>
-            <button class="project-button" onclick="openProject('https://note-taking-app-kappa-self.vercel.app/')">Note Taking App</button>
+            <button class="project-button" onclick="openProject('https://clock-six-lime.vercel.app/')">Clock App</button>
+            
+            <!-- Advanced Framework Projects -->
+            <button class="project-button" onclick="openProject('https://next-js-six-wheat-39.vercel.app/')">Next.js Project</button>
+            <button class="project-button" onclick="openProject('https://nuxt-js-sand.vercel.app/')">Nuxt.js Project</button>
             <button class="project-button" onclick="openProject('https://angular-project-tan.vercel.app/')">Angular Project</button>
             <button class="project-button" onclick="openProject('https://svelte-project-kappa.vercel.app/')">Svelte Project</button>
-            <button class="project-button" onclick="openProject('https://nuxt-js-sand.vercel.app/')">Nuxt.js Project</button>
-            <button class="project-button" onclick="openProject('https://amnamine.github.io/DodgeTheCreeps/')">DodgeTheCreeps</button>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 My Project Showcase</p>
+        <p>&copy; 2024 My Project Showcase | Built with <span>❤️</span> by Amine</p>
     </footer>
 
     <script src="script.js"></script>
