--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@
             <button class="project-button" onclick="openProject('https://amnamine.github.io/MyMobileApps/')">Mobile Apps</button>
             <button class="project-button" onclick="openProject('https://amnamine.github.io/MyGames/')">Games Collection</button>
 
-            <!-- Framework Showcases -->
-            <button class="project-button" onclick="openProject('https://amnamine.github.io/Angular-Project/')">Angular Demo</button>
-            <button class="project-button" onclick="openProject('https://amnamine.github.io/Vue-Project/')">Vue Demo</button>
-            <button class="project-button" onclick="openProject('https://amnamine.github.io/React-Project/')">React Demo</button>
-            <button class="project-button" onclick="openProject('https://amnamine.github.io/Svelte-Project/')">Svelte Demo</button>
-            <button class="project-button" onclick="openProject('https://amnamine.github.io/Ember-Project/')">Ember Demo</button>
-            <button class="project-button" onclick="openProject('https://amnamine.github.io/Bootstrap-Showcase/')">Bootstrap Demo</button>
-            <button class="project-button" onclick="openProject('https://amnamine.github.io/Tailwind-Showcase/')">Tailwind Demo</button>
+            <!-- Framework Projects -->
+            <button class="project-button" onclick="openProject('https://next-js-six-wheat-39.vercel.app/')">Next.js Starter</button>
+            <button class="project-button" onclick="openProject('https://angular-project-tan.vercel.app/')">Angular App</button>
+            <button class="project-button" onclick="openProject('https://nuxt-js-sand.vercel.app/')">Nuxt Welcome</button>
+            <button class="project-button" onclick="openProject('https://svelte-project-kappa.vercel.app/')">Svelte App</button>
 
             <!-- Web Applications -->
             <button class="project-button" onclick="openProject('https://cscclub-mu.vercel.app/')">CSC Club</button>
